konst/tests/misc_tests/destructure_ui_tests/omit_field_tupled_struct_err.stderr
error: `..` patterns are not supported in top-level tuple struct patterns
 --> tests/misc_tests/destructure_ui_tests/omit_field_tupled_struct_err.rs:9:5
  |
9 |     konst::destructure!{Tupled(bar, ..) = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__destructure__tuple_struct_field_names` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `bar` in this scope
  --> tests/misc_tests/destructure_ui_tests/omit_field_tupled_struct_err.rs:10:5
   |
10 |     bar
   |     ^^^ not found in this scope

error: pattern requires `..` due to inaccessible fields
 --> tests/misc_tests/destructure_ui_tests/omit_field_tupled_struct_err.rs:4:5
  |
4 |     konst::destructure!{Tupled(bar) = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ignore the inaccessible and unused fields
 --> src/macros/destructuring.rs
  |
  |             (0, .. 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15)
  |               ++++
